test/test_suite/errors/error_semantic_fails.c3
error TooBig // #error: Error type may not exceed pointer
{
    usize a;
    ichar b;
}
